<resources>
    <string name="app_name">PartyManager</string>
    <string name="resSum">Общая сумма:</string>
    <string name="perPersonSum">На человека:</string>
    <string name="whatToBuy">Что покупаем?</string>
    <string name="whoBuy">Кто покупает?</string>
    <string name="quantity">Количество: </string>
    <string name="averageCost">Примерная цена: </string>
    <string name="add">Добавить</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="loginToAccount">Войти через ВКонтакте</string>
    <string name="singInProcess">Идёт процесс авторизации</string>
    <string name="guests">Гости</string>
    <string name="purchases">Покупки</string>
    <string name="timeAndPlace">Время и место</string>
    <string name="partyName">Название вечеринки</string>
    <string name="details">Детали</string>
    <string name="fill_friend_name">Введите имя друга</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="enter_party_name">Введите название вечеринки</string>
    <string name="alertGuestNameIsEmpty">Заполните имя гостя</string>
    <string name="alertSomeFieldsAreEmpty">Заполните все поля</string>
    <string name="alertHisIsNotYourFriend">Выберете друга из Вконтакте</string>
    <string name="logout">Выйти</string>
    <string name="place_is_set">Место проведения установлено</string>
    <string name="network_is_not_available">Нет подключения к интернету</string>
    <string name="send_button_label">Отправить</string>
    <string name="new_friend_in">Новый друг в</string>
    <string name="new_item_in">Новая позиция в</string>
    <string name="new_location_set">Новое место проведения в</string>
    <string name="invite_to_new_party">Новое приглашение!</string>
    <string name="save">Сохранить</string>
    <string name="main">Основное</string>
    <string name="other">Дополнительно</string>
    <integer name="com_vk_sdk_AppId">5747918</integer>
</resources>
