<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.vsu.nastya.partymanager.AddItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatToBuy" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whoBuy" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/add_item_quantity_progress_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/add_item_quantity_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50" />

    <TextView
        android:id="@+id/add_item_price_progress_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averageCost"
        android:layout_marginTop="16dp"/>

    <SeekBar
        android:id="@+id/add_item_price_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="2500" />
    <Button
        android:id="@+id/add_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="16dp"/>
</LinearLayout>
