<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="35dp"
    android:layout_marginStart="35dp"
    android:layout_marginTop="25dp"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/guests"
        android:textSize="25sp"
        android:id="@+id/partyDetails_guests_textView"
        android:clickable="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchases"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:id="@+id/partyDetails_purchase_textView"
        android:clickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/timeAndPlace"
        android:layout_marginTop="30dp"
        android:id="@+id/partyDetails_timePlace_textView"
        android:clickable="true"/>

</LinearLayout>
