<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.partymanager.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:ems="14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:inputType="text"
        android:id="@+id/loginActv_login_editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginActv_password_editText"
        android:ems="14"
        android:layout_marginTop="37dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/loginActv_login_editText" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/loginActv_login_button"
        android:layout_below="@id/loginActv_password_editText"
        android:layout_centerHorizontal="true"
        android:text="@string/loginToAccount"
        android:layout_alignLeft="@id/loginActv_password_editText"
        android:layout_alignStart="@id/loginActv_password_editText"
        android:layout_alignRight="@id/loginActv_password_editText"
        android:layout_alignEnd="@id/loginActv_password_editText"
        android:layout_marginTop="35dp" />
</RelativeLayout>
