<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/item_name_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/whatToBuy"
            android:inputType="text"
            android:textColor="@color/textColorDetails"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/item_who_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/whoBuy"
            android:inputType="text"
            android:textColor="@color/textColorDetails"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_quantity_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/item_quantity_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/item_quantity_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_price_progress_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averageCost" />

        <TextView
            android:id="@+id/item_price_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/item_price_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="2500" />
</LinearLayout>