<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    android:orientation="horizontal"
    tools:context=".party_list.AddPartyActivity"
    android:id="@+id/coordinator">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/add_party_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/add_party_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="enterAlways"
            app:title="">

            <ImageView
                android:id="@+id/add_party_big_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/party_cat_violet"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/add_student_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/add_party_big_photo"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_layout_marginBottom"
            android:layout_marginEnd="@dimen/card_view_layout_marginLeft"
            android:layout_marginLeft="@dimen/card_view_layout_marginLeft"
            android:layout_marginRight="@dimen/card_view_layout_marginRight"
            android:layout_marginStart="@dimen/card_view_layout_marginLeft"
            android:layout_marginTop="6dp"
            app:cardElevation="4dp"
            app:contentPadding="@dimen/card_view_content_padding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/add_party_main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main"

                    android:textColor="@color/colorLightPurple" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/add_party_name_tv"
                    android:layout_alignLeft="@id/add_party_main_text"
                    android:layout_alignStart="@id/add_party_main_text"
                    android:layout_marginBottom="@dimen/card_view_icon_bottom_margin"
                    android:src="@drawable/ic_star_primary_24dp" />

                <EditText
                    android:id="@id/add_party_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_party_main_text"
                    android:layout_marginLeft="@dimen/card_view_item_near_icon_margin"
                    android:layout_marginStart="@dimen/card_view_item_near_icon_margin"
                    android:layout_marginTop="@dimen/card_view_items_margin"
                    android:hint="@string/partyName"
                    android:inputType="textCapWords" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/add_party_time_tv"
                    android:layout_alignLeft="@id/add_party_main_text"
                    android:layout_alignStart="@id/add_party_main_text"
                    android:src="@drawable/ic_time_primary_24dp" />

                <TextView
                    android:id="@id/add_party_time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/add_party_name_tv"
                    android:layout_alignStart="@id/add_party_name_tv"
                    android:layout_below="@id/add_party_name_tv"
                    android:layout_marginTop="12dp"
                    android:text="17:45"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/add_party_date_tv"
                    android:layout_alignLeft="@id/add_party_main_text"
                    android:layout_alignStart="@id/add_party_main_text"
                    android:src="@drawable/ic_calendar_primary_24dp" />

                <TextView
                    android:id="@id/add_party_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/add_party_name_tv"
                    android:layout_alignStart="@id/add_party_name_tv"
                    android:layout_below="@id/add_party_time_tv"
                    android:layout_marginTop="18dp"
                    android:text="25 апр."
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_layout_marginBottom"
            android:layout_marginEnd="@dimen/card_view_layout_marginLeft"
            android:layout_marginLeft="@dimen/card_view_layout_marginLeft"
            android:layout_marginRight="@dimen/card_view_layout_marginRight"
            android:layout_marginStart="@dimen/card_view_layout_marginLeft"
            android:layout_marginTop="@dimen/card_view_layout_marginTop"
            app:cardElevation="4dp"
            app:contentPadding="@dimen/card_view_content_padding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/add_student_education_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="@color/colorLightPurple" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/add_party_comment_tv"
                    android:layout_alignLeft="@id/add_student_education_text"
                    android:layout_alignStart="@id/add_student_education_text"
                    android:layout_marginBottom="@dimen/card_view_icon_bottom_margin"
                    android:src="@drawable/ic_comment_primary_24dp" />

                <EditText
                    android:id="@id/add_party_comment_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_student_education_text"
                    android:layout_marginLeft="@dimen/card_view_item_near_icon_margin"
                    android:layout_marginStart="@dimen/card_view_item_near_icon_margin"
                    android:layout_marginTop="@dimen/card_view_items_margin"
                    android:hint="Комментарий"
                    android:inputType="textCapWords" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_party_photo_button"
        android:layout_width="@dimen/floating_action_button_size"
        android:layout_height="@dimen/floating_action_button_size"
        android:layout_margin="15dp"
        android:scaleType="center"
        android:src="@drawable/ic_photo_camera_white_24dp"
        app:layout_anchor="@id/add_party_big_photo"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>